- Fixed mistake in title pattern - Added alternate update system based on signals passed beteen cells

--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@ Presets:
   <option value="block"	 >	block			</option>
   <option value="glider" >	glider			</option>
   <option value="beehive" >	beehive			</option>
-
+</select>
+Updating:
+<select name="Updating" id="updating" onchange="changeUpdateMethod()">
+  <option value="simultaneous" >  simultaneous </option>
+  <option value="signal"       >  signal         </option>
 </select>
 </form>
 
