--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <title>Game of Life CA</title>
 <link rel="stylesheet" href="main.css">
+<link rel="shortcut icon" href="CA.ico">
 </head>
 
 <body id= "body" onresize = "resizeFunction()">
