--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@ Too bad your browser does not support the HTML5 canvas.
 <script src="canvas.js"			    ></script>
 <script src="patterns.js"		    ></script>
 <script src="ruleset.js"        ></script>
+<script src="presets.js"  ></script>
 <script src="HTML_controls.js"	></script>
 <script src="ca_main.js"        ></script>
 
