- Show updating now semi-transparent for better overlay

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@ faster &#8674; slower
 Show cells that will update:
   <select id="showupdatingcells" class="main" onchange="changeShowUpdating()" > 
   <option value="false" > No </option>
-  <option value="#ffffff" > White </option>
-  <option value="#000000" > Black </option>
+  <option value="rgba(255,255,255,0.5)" > White </option>
+  <option value="rgba(0,0,0,0.5)" > Black </option>
   </select>
 </form>
 
