- MInor UI fixes

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@ Too bad your browser does not support the HTML5 canvas.
 <script src ="javascript/HTML_controls.js"></script>
 <script src ="javascript/update_method.js"></script>
 <script src ="javascript/ca_main.js"      ></script>
+<!--<script src ="javascript/web_gl.js"       ></script>-->
 
 </body>
 
