- Linked WebGL and non-WebGL pages - Removed unused UI elements from WebGL index

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@ Fork this project on<br>
 </object>
 </a>
 
+<a href="index_(webGL).html" style="text-decoration:none">
+<h2 class="bordersTop"> WebGL version </h2>
+<p class="main noBorder"> Switch to a version running on WebGL. It contains less features (currently being improved), but a the display and rule calculation are performed by the graphics card, it allows for a much larger number of cells with no slowdown.</p>
+</a>
 
 <h2 class="bordersTop"> Controls </h2>
 
