--- a/index_(webGL).html
+++ b/index_(webGL).html
@@ -109,6 +109,7 @@
 <div id="internal" class="main noBorder">
 
 <h1 class="main noBorder" style="margin: 5px"> GAME OF LIFE </h1>
+<h2 class="main noBorder"> WebGL version </h2>
 <h3>By Zombie-Einstein</h3>
 
 <p >
@@ -171,7 +172,7 @@ Width
   	</select>  
 </form>
 
-<p>Topology is currently locked at torus</p>
+<p>Topology is also currently locked at torus</p>
 
 <h2 class="bordersTop"> Algorithm </h2>
 
@@ -182,12 +183,14 @@ Width
   </select>
 </form>
 
+<!--
 <button class="main" onclick="randomRuleSet()"> Random </button><br>
-
+-->
 
 
 <!-- Rule forms are generated here by javascript -->
 
+<!--
 <button class="main padding centred" onclick="updateRuleset()"> Update  Ruleset </button><br>
 
 <form >
@@ -208,9 +211,13 @@ Show cells that will update:
   </select>
 </form>
 
-
+-->
 <h2 class="bordersTop"> Cells </h2>
-<button class="main" onclick="loadRandomTexture(0.6)" > Fill Randomly </button><br>
+<button class="main" onclick="fillRandomCells()" > Fill Randomly </button> 
+<form class="main" onsubmit="return false" >
+  P(alive)=
+  <input type="number" class="main" id="pAlive" min="0" max="1" value ="0.5" step="0.1" >
+</form>
 
 When paused, click on a cell to:
 
