- Minor bug fixes

--- a/index_(webGL).html
+++ b/index_(webGL).html
@@ -256,7 +256,7 @@ Too bad your browser does not support the HTML5 canvas.
 <script src ="javascript_(webGL)/presets.js"  		></script>
 <script src ="javascript_(webGL)/color.js"  		  ></script>
 <script src ="javascript_(webGL)/HTML_controls.js"></script>
-<script src ="javascript_(webGL)/update_method.js"></script>
+<!--<script src ="javascript_(webGL)/update_method.js"></script>-->
 <script src ="javascript_(webGL)/web_gl.js"       ></script>
 <script src ="javascript_(webGL)/ca_main.js"      ></script>
 
