--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Fork this project on<br>
 
 <a href="index_(webGL).html" style="text-decoration:none">
 <h2 class="bordersTop"> WebGL version </h2>
-<p class="main noBorder"> Switch to a version running on WebGL. It contains less features (currently being improved), but a the display and rule calculation are performed by the graphics card, it allows for a much larger number of cells with no slowdown.</p>
+<p class="main noBorder"> Click here to switch to a version of this simulation running on WebGL. It contains less features (currently being improved), but a the display and rule calculation are performed by the graphics card, it allows for a much larger number of cells with no slowdown.</p>
 </a>
 
 <h2 class="bordersTop"> Controls </h2>
