--- a/index_(webGL).html
+++ b/index_(webGL).html
@@ -9,22 +9,24 @@
 
      <!-- Simple vertex shader, just renders to full viewport/canvas -->
 
-    <script id="2d-vertex-shader" type="x-shader/x-vertex">
+     <script id="2d-vertex-shader" type="x-shader/x-vertex">
 
-        attribute vec2 a_position;
-        attribute vec2 a_texCoord;
+         // Screen and texture co-ords
+         attribute vec2 a_position;
+         attribute vec2 a_texCoord;
 
-        varying vec2 v_texCoord;
+         // Raster co-ordinates passed to fragment shader
+         varying vec2 v_texCoord;
 
-        void main() {
+         void main() {
 
-          gl_Position = vec4( a_position, 0, 1);
+           gl_Position = vec4( a_position, 0, 1);
 
-   		    v_texCoord = a_texCoord;
+    		    v_texCoord = a_texCoord;
 
-        }
+         }
 
-    </script>
+     </script>
 
      <!-- Display fragment shader, just displays without any calculation -->
 
@@ -46,17 +48,59 @@
 
     </script>
 
+    <script id="2d-vertex-rules" type="x-shader/x-vertex">
+
+        precision mediump float;
+
+        // Screen and texture co-ords
+        attribute vec2 a_position;
+        attribute vec2 a_texCoord;
+
+        // Raster co-ordinates passed to fragment shader
+        varying vec2 v_texCoord;
+
+        // Ruleset texture ( as also passed to fragment shader )
+        uniform vec2 u_ruleSize;
+        uniform sampler2D u_rulesText;
+        // Calculate the sum of the neighbour values here then pass to fragment shader
+        // Do this here as it doesn't need to be done individually for each vertex
+        varying vec4 ruleSum[9];
+
+        // Method to get sum of possible neighbours to check against
+        vec4 getRuleSum( int x, vec2 pixel ){
+
+          vec4 sum = vec4(0.0,0.0,0.0,0.0);
+          for( int i = 0; i < 8; i++ ){
+            sum += texture2D( u_rulesText, 0.5*pixel +pixel * vec2( x, i+2 ) );
+          }
+          return sum;
+        }
+
+        void main() {
+
+          vec2 ruleUnit = vec2( 1.0, 1.0 )/u_ruleSize;
+
+          for ( int i = 0; i < 9; i++ ){
+
+              ruleSum[i] = getRuleSum( i+1, ruleUnit );
+          }
+
+          gl_Position = vec4( a_position, 0, 1);
+
+   		    v_texCoord = a_texCoord;
+
+        }
+
+    </script>
+
     <!-- Fragment shader program with GOL ruleset-->
 
     <script id="2d-fragment-rules" type="x-shader/x-fragment">
-
 
     precision mediump float;
 
     // Array of neighbour locations
     uniform ivec2 neighbours[8];
-
-
 
     // Previous state texture and dimensions
 	  uniform vec2 u_textureSize;
@@ -69,13 +113,19 @@
     // Varying values passed from vertex shader
 	  varying vec2 v_texCoord;
 
+    // Sum of rule neighbour values passed from vertex
+    varying vec4 ruleSum[9];
+
 	  // Function returns neighbour colour values: between 1 (i.e. 255) or 0
       vec4 get( int x, int y, vec2 pixel ){ return texture2D( u_backText, v_texCoord + pixel * vec2(x,y) );  }
 
       void main(){
+
+
       	// Get co-ordinate values to move one pixel of textures
       	vec2 onePixel = vec2( 1.0, 1.0 )/u_textureSize;
         vec2 ruleUnit = vec2( 1.0, 1.0 )/u_ruleSize;
+
 
         // Initialize average neighbour sum vector
         vec4 neighbourSum = vec4(0.0,0.0,0.0,0.0);
@@ -91,9 +141,16 @@
         for ( int i = 0; i <2; i++ ){
 
           if ( texture2D(u_backText, v_texCoord) == texture2D( u_rulesText, 0.5*ruleUnit+ruleUnit*vec2(0,i) ) ){
-            // When match found then assign color value from rule texture
-            gl_FragColor = texture2D( u_rulesText, 0.5*ruleUnit+ruleUnit*vec2( neighbourSum.x+1.0,i) );
 
+            for( int j = 0; j < 9; j++ ){
+              // Compare sum of neighbour values against those provided rule texture
+              // ( provided by vertex shader )
+              if( ruleSum[j] == neighbourSum ){
+
+                gl_FragColor = texture2D( u_rulesText, 0.5*ruleUnit+ruleUnit*vec2( j+1, i) );
+
+              }
+            }
           }
         }
 
@@ -188,7 +245,7 @@ Width
 
 <p>Click to change the cell state resulting from a current state, and a number of neighbours.</p>
 
-<canvas id="rulecanvas" class="main "  onclick="ruleCanvas.clickEvent(event)" width="190" height=60 >
+<canvas id="rulecanvas" class="main "  onclick="ruleCanvas.clickEvent(event)" width="190" height=190 >
 Too bad your browser does not support the HTML5 canvas.
 </canvas>
 
